--- a/FirstCode/broadcast_forceoffline/src/main/res/layout/activity_login.xml
+++ b/FirstCode/broadcast_forceoffline/src/main/res/layout/activity_login.xml
@@ -41,7 +41,6 @@
                     android:maxLines="1"
                     android:singleLine="true" />
 
-
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -60,6 +59,20 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <CheckBox
+                    android:id="@+id/rememberPass"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Remember" />
+
+            </LinearLayout>
             <Button
                 android:id="@+id/email_sign_in_button"
                 style="?android:textAppearanceSmall"
