--- a/MaterialTest/app/src/main/res/layout/activity_fruit.xml
+++ b/MaterialTest/app/src/main/res/layout/activity_fruit.xml
@@ -71,6 +71,7 @@
 
     <!--悬浮按钮-->
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
